Implement mouse controls for camera

--- a/NBodiment.vcxproj
+++ b/NBodiment.vcxproj
@@ -181,6 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\fragment.glsl" />
+    <None Include="shaders\geometry.glsl" />
     <None Include="shaders\vertex.glsl" />
   </ItemGroup>
   <ItemGroup>
