--- a/imgui.ini
+++ b/imgui.ini
@@ -5,8 +5,13 @@ Collapsed=0
 
 [Window][Settings]
 Pos=10,10
-Size=201,44
+Size=234,44
 Collapsed=1
+
+[Window][##speed]
+Pos=902,30
+Size=115,28
+Collapsed=0
 
 [Docking][Data]
 
