--- a/NBodiment.vcxproj.filters
+++ b/NBodiment.vcxproj.filters
@@ -74,6 +74,9 @@
     <None Include="shaders\vertex.glsl">
       <Filter>Shaders</Filter>
     </None>
+    <None Include="shaders\geometry.glsl">
+      <Filter>Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Shaders">
