--- a/NBodiment.vcxproj
+++ b/NBodiment.vcxproj
@@ -181,7 +181,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\fragment.glsl" />
-    <None Include="shaders\gravity.glsl" />
+    <None Include="shaders\physics.glsl" />
     <None Include="shaders\skyboxFragment.glsl" />
     <None Include="shaders\skyboxVertex.glsl" />
     <None Include="shaders\vertex.glsl" />
