--- a/.gitattributes
+++ b/.gitattributes
@@ -63,5 +63,5 @@
 #*.RTF   diff=astextplain
 
 
-imgui/* linguist-vendored
-libs/* linguist-vendored
+imgui/** linguist-vendored
+libs/** linguist-vendored
