New resource file

--- a/NBodiment.vcxproj.filters
+++ b/NBodiment.vcxproj.filters
@@ -90,6 +90,9 @@
       <Filter>Resources\Shaders\Bloom</Filter>
     </None>
     <None Include="README.md" />
+    <None Include="shaders\collision.glsl">
+      <Filter>Resources\Shaders</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Headers">
