--- a/NBodiment.vcxproj
+++ b/NBodiment.vcxproj
@@ -189,6 +189,7 @@
     <None Include="shaders\bloom\downsample.glsl" />
     <None Include="shaders\bloom\fullquad.glsl" />
     <None Include="shaders\bloom\upsample.glsl" />
+    <None Include="shaders\collision.glsl" />
     <None Include="shaders\fragment.glsl" />
     <None Include="shaders\physics.glsl" />
     <None Include="shaders\vertex.glsl" />
